--- a/meson.build
+++ b/meson.build
@@ -62,19 +62,76 @@ fortranobject_dep = declare_dependency(
   include_directories: [incdir_numpy, incdir_f2py])
 
 # We create a custom target to compile and make the module
-dimensions_source = custom_target('dimensionsmodule.c',
-  input : ['src/mod_dimensions.f95'],
-  output : ['dimensionsmodule.c', 'dimensions-f2pywrappers2.f90'],
-  command : [py3, '-m', 'numpy.f2py', '@INPUT@', '-m', 'dimensions', '--lower']
+
+## dimensions ##
+#dimensions_source = custom_target('dimensionsmodule.c',
+#  input : ['src/mod_dimensions.f95'],
+#  output : ['dimensionsmodule.c', 'dimensions-f2pywrappers2.f90'],
+#  command : [py3, '-m', 'numpy.f2py', '@INPUT@', '-m', 'dimensions', '--lower']
+#  )
+#
+#py3.extension_module('dimensions',
+#  ['src/mod_dimensions.f95', dimensions_source],
+#  include_directories: inc_dirs,
+#  dependencies : [py3_dep, fortranobject_dep],
+#  subdir: 'gastli',   # if you want to install this part as a submodule
+#  install : true
+#)
+
+## constants ##
+#constants_source = custom_target('constantsmodule.c',
+#  input : ['src/mod_constants.f95'],
+#  output : ['constantsmodule.c', 'constants-f2pywrappers2.f90'],
+#  command : [py3, '-m', 'numpy.f2py', '@INPUT@', '-m', 'constants', '--lower']
+#  )
+#
+#py3.extension_module('constants',
+#  ['src/mod_constants.f95', constants_source],
+#  include_directories: inc_dirs,
+#  dependencies : [py3_dep, fortranobject_dep],
+#  subdir: 'gastli',   # if you want to install this part as a submodule
+#  install : true
+#)
+
+## fort_input ##
+fort_input_source = custom_target('fortinputmodule.c',
+  input : ['src/fort_input.f95'],
+  output : ['fortinputmodule.c', 'fortinput-f2pywrappers2.f90'],
+  command : [py3, '-m', 'numpy.f2py', '@INPUT@', '-m', 'fortinput', '--lower']
   )
 
-py3.extension_module('dimensions',
-  ['src/mod_dimensions.f95', dimensions_source],
+py3.extension_module('fortinput',
+  ['src/fort_input.f95', fort_input_source],
   include_directories: inc_dirs,
   dependencies : [py3_dep, fortranobject_dep],
   subdir: 'gastli',   # if you want to install this part as a submodule
   install : true
 )
+
+## GASTLI_interior ##
+#gastli_interior_source = custom_target('gastli_interiormodule.c',
+#  input : ['src/mod_funcmazevet.f95',\
+#           'src/mod_mazevet.f95',\
+#           'src/mod_constants.f95',\
+#           'src/mod_dimensions.f95',\
+#           'src/mod_parameters.f95',\
+#           'src/mod_functions.f95',\
+#           'src/mod_modEOS.f95',\
+#           'src/mod_subroutines.f95',\
+#           'src/GASTLI_interior.f95'],
+#  output : ['gastli_interiormodule.c', 'gastli_interior-f2pywrappers2.f90'],
+#  command : [py3, '-m', 'numpy.f2py', '@INPUT@', '-m', 'gastli_interior', '--lower']
+#  )
+#
+#py3.extension_module('gastli_interior',
+#  ['src/GASTLI_interior.f95', gastli_interior_source],
+#  include_directories: inc_dirs,
+#  dependencies : [py3_dep, fortranobject_dep],
+#  subdir: 'gastli',   # if you want to install this part as a submodule
+#  install : true
+#)
+
+
 
 py3.install_sources([],
   pure: false,
