--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 build-backend = "mesonpy"
 requires = [
     "meson-python >=0.15.0",
-    "numpy >= 1.25.0",
+    "numpy >= 1.25.0"
 ]
 
 [project]
